# Nova

Backend/: .env.template  README.md  main.py  pyproject.toml  test_graph.py
Backend/api/: __init__.py  ask.py  auth.py  test.py
Backend/core/: __init__.py  database.py  logging_config.py  settings.py
Backend/exceptions/: __init__.py  auth_exceptions.py
Backend/graph/: __init__.py  graph.py  llm.py  mcp_client.py  prompts.py  state.py
Backend/graph/agents/: __init__.py  chat_agent.py  context_agent.py  mcp_agent.py  title_agent.py
Backend/mcp_servers/: joke_mcp_server.py  math_mcp_server.py
Backend/models/: __init__.py  conversation_message.py  conversation_session.py  refresh_tokens.py  users.py
Backend/repository/: __init__.py  conversation_repository.py  refresh_tokens_repository.py  user_repository.py
Backend/schema/: __init__.py  ask.py  users.py
Backend/security/: __init__.py  filter.py  utils.py
Backend/services/: ask_service.py  auth_services.py
Frontend/: .gitignore  README.md  package-lock.json  package.json
Frontend/src/: App.jsx  constants.js
Frontend/src/components/: AuthPage.jsx  Dashboard.jsx  Icons.jsx  SessionExpiredDialog.jsx
Frontend/src/components/dashboard/: ChatArea.jsx  RenameModal.jsx  Sidebar.jsx
Frontend/src/hooks/: useChat.js
Frontend/src/services/: api.js  auth.js  chat.js  client.js  sessions.js
Frontend/src/styles/: animations.css  auth.css  chat.css  dashboard.css  form.css  global.css  responsive.css
